[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anritsuParser"
version = "0.0.1"
authors = [
  { name="Thormund", email="thormund@nus.edu.sg" },
]
maintainers = [
  { name="Thormund", email="thormund@nus.edu.sg" },
]
description = "A Python Module to parse Anritsu measurement saves"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "numpy",
    "orjson"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
# exclude = [""]
namespaces = false

[project.urls]
"Homepage" = "https://github.com/thormund-nus/anritsuParser"
"Bug Tracker" = "https://github.com/thormund-nus/anritsuParser/issues"